header e contatos terminados

--- a/index.html
+++ b/index.html
@@ -4,22 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap" rel="stylesheet">
     <title>Document</title>
 </head>
 
 <body>
     <!--CABEÇALHO-->
     <header>
-        <section id="presentation-container">
             <div id="presentation">
-                <h1>Transformando em<br>
+                <h1 id="titulo-header">Transformando em<br>
                     produtos digitais
                 </h1>
                 <p>Para que nossos clientes mantenham altos níveis de qualidade,<br>
                    oferecemos serviços de gestão de projetos e análise de negócios<br>
                    com nossa equipe especializada em diversos setores.</p>
             </div>
-        </section>
     </header>
     
     <main>
@@ -159,10 +160,11 @@
 
         <!--CONTATOS-->
         <section>
-            <div>
-                <h1>Entre em contato</h1>
+            <div id="contatos">
+                <img src="/Assets/icone-contato.svg">
+                <h2>Entre em contato</h2>
                 <p>Contate-nos para obter informações detalhadas sobre nossas soluções, serviços e produtos.</p>
-                <button>Enviar mensagem</button>
+                <button id="botao-contatos">Enviar mensagem</button>
             </div>
         </section>
     </main>
