--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <h1 id="titulo-header">Transformando em<br>
                     produtos digitais
                 </h1>
-                <p>Para que nossos clientes mantenham altos níveis de qualidade,<br>
+                <p id="presentation-text">Para que nossos clientes mantenham altos níveis de qualidade,<br>
                    oferecemos serviços de gestão de projetos e análise de negócios<br>
                    com nossa equipe especializada em diversos setores.</p>
             </div>
@@ -65,24 +65,32 @@
         </section>
        
         <!--QUALIDADES-->
-        <section>
-            <div> 
+        <section id="qualities">
+            <div id="qualities-title"> 
                 <h1>O que oferecemos de melhor?</h1>
-                <p>Soluções suportadas por IoT</p>
+                <p id="qualities-text">Soluções suportadas por IoT</p>
             </div> 
-            <div>
-                <p>Qualidade de <br>
+
+            <div id="qualities-list">
+                <p class="q-list-text">Qualidade de <br>
                     Software
                 </p>
 
-                <p>Prever possíveis erros<br>
+                <img class="qualities-img" src="./Assets/arrow.svg" alt="">
+
+                <p class="q-list-text">Prever possíveis erros<br>
                     na aplicação</p>
-                <p>
+                
+                    <img class="qualities-img" src="./Assets/arrow.svg" alt="">
+
+                <p class="q-list-text">
                     Evitar  possíveis<br>
                     riscos
                 </p>
 
-                <p>
+                <img class="qualities-img" src="./Assets/arrow.svg" alt="">
+
+                <p class="q-list-text">
                     Economia de tempo<br>
                     e custo
                 </p>
