--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <!--CABEÇALHO-->
     <header>
             <div id="presentation">
-                <h1 id="titulo-header">Transformando em<br>
+                <h1 id="title-header">Transformando em<br>
                     produtos digitais
                 </h1>
                 <p id="presentation-text">Para que nossos clientes mantenham altos níveis de qualidade,<br>
@@ -98,46 +98,41 @@
         </section>
 
         <!--ARTIGOS-->
-        <section>
-            <div>
-                <article>
-                    <div>
-                        <h1>Gestão de Qualidade <br>
+        <section id="articles">
+            <article  id="g1">
+                    <div id="g1-text">
+                        <h1 id="g1-title">Gestão de Qualidade <br>
                             e Processos</h1>
-                        <p>Nossa equipe experiente; É composto por gerentes de projetos <br>
+                        <p id="g1-p">Nossa equipe experiente; É composto por gerentes de projetos <br>
                            especializados, com experiência em diversos setores e com <br>
                            certificação PMP®. Estamos aqui para apoiar a gestão dos seus <br>
                            projetos, fortalecer as áreas que você considera fracas e implementar <br>
                            e desenvolver a metodologia PMI® com validade internacional na sua <br>
                            empresa.</p>
-                        <button>Ver mais</button>
+                        <button>Ver mais</button>   
                     </div>
-                </article>
 
-                <figure>
-                    <img src="">
-                </figure>
-            </div>
+                    <figure>
+                        <img src="./Assets/article1.svg">
+                    </figure>
+            </article>
             
-            <div>    
-                <article>
-                    <div>
-                        <h1>Gerenciamento e <br>
+            <article id="g2">  
+                    <div id="g2-text">
+                        <h1 id="g2-title">Gerenciamento e <br>
                             análise de testes</h1>
-                        <p>Para evitar erros de software nos projetos que consultamos, aplicamos <br>
+                        <p id="g2-p">Para evitar erros de software nos projetos que consultamos, aplicamos <br>
                            cuidadosamente os testes que realizamos em cada etapa do projeto, <br>
                            seja manualmente ou com automação de testes. Nossa experiente <br>
                            equipe de testes oferece às instituições uma experiência de cliente <br>
                            segura, de alta qualidade e satisfatória do início ao fim, com serviços de <br>
                            teste de software de alta qualidade.</p>
-                        <button> Ver mais</button>
+                        <button>Ver mais</button>   
                     </div>
-                </article>
-
-                <figure>
-                    <img src="">
-                </figure>
-            </div>
+                    <figure>
+                        <img src="./Assets/article2.svg">
+                    </figure>
+            </article>
         </section>
 
         <!--REFERÊNCIAS-->
@@ -171,7 +166,7 @@
             <div id="contatos">
                 <img src="/Assets/icone-contato.svg">
                 <h2>Entre em contato</h2>
-                <p>Contate-nos para obter informações detalhadas sobre nossas soluções, serviços e produtos.</p>
+                <p id="p-contatos">Contate-nos para obter informações detalhadas sobre nossas soluções, serviços e produtos.</p>
                 <button id="botao-contatos">Enviar mensagem</button>
             </div>
         </section>
