--- a/index.html
+++ b/index.html
@@ -157,46 +157,46 @@
         </section>
 
         <!--REFERÊNCIAS-->
-        <section>
-            <div companies-text>
+        <section id="companies-section">
+            <div id="companies-text">
                 <h1>Nossas referências</h1>
                 <p>Nossos parceiros de negócios que confiam em nós e trabalham juntos</p>
             </div>
 
             <div id="companies">
-                <div class:"grid-companies">
+                <div id="companie-1">
                     <img src="./Assets/empresa1.svg">
                 </div>
 
-                <div class:"grid-companies">
+                <div id="companie-2">
                     <img src="./Assets/empresa2.svg">
                 </div>
 
-                <div class:"grid-companies">
+                <div id="companie-3">
                     <img src="./Assets/empresa3.svg">
                 </div>
 
-                <div class:"grid-companies">
+                <div id="companie-4">
                     <img src="./Assets/empresa4.svg">
                 </div>
 
-                <div class:"grid-companies">
+                <div id="companie-5">
                     <img src="./Assets/empresa5.svg" > 
                 </div>
 
-                <div class:"grid-companies">
+                <div id="companie-6">
                     <img src="./Assets/empresa6.svg">
                 </div>
 
-                <div class:"grid-companies">
+                <div id="companie-7">
                     <img src="./Assets/empresa7.svg">
                 </div>
 
-                <div class:"grid-companies">
+                <div id="companie-8">
                     <img src="./Assets/empresa8.svg"> 
                 </div>
 
-                <div class:"grid-companies">
+                <div id="companie-9">
                     <img src="./Assets/empresa9.svg">
                 </div>
             </div>
