--- a/index.html
+++ b/index.html
@@ -160,44 +160,44 @@
         <section id="companies-section">
             <div id="companies-text">
                 <h1>Nossas referências</h1>
-                <p>Nossos parceiros de negócios que confiam em nós e trabalham juntos</p>
+                <p id="companies-p">Nossos parceiros de negócios que confiam em nós e trabalham juntos</p>
             </div>
 
             <div id="companies">
-                <div id="companie-1">
-                    <img src="./Assets/empresa1.svg">
+                <div class="companies-style" id="companie-1">
+                    <img src="./Assets/empresa1.png">
                 </div>
 
-                <div id="companie-2">
-                    <img src="./Assets/empresa2.svg">
+                <div class="companies-style" id="companie-2">
+                    <img src="./Assets/empresa2.png">
                 </div>
 
-                <div id="companie-3">
-                    <img src="./Assets/empresa3.svg">
+                <div class="companies-style" id="companie-3">
+                    <img src="./Assets/empresa3.png">
                 </div>
 
-                <div id="companie-4">
-                    <img src="./Assets/empresa4.svg">
+                <div class="companies-style" id="companie-4">
+                    <img src="./Assets/empresa4.png">
                 </div>
 
-                <div id="companie-5">
-                    <img src="./Assets/empresa5.svg" > 
+                <div class="companies-style" id="companie-5">
+                    <img src="./Assets/empresa5.png" > 
                 </div>
 
-                <div id="companie-6">
-                    <img src="./Assets/empresa6.svg">
+                <div class="companies-style" id="companie-6">
+                    <img src="./Assets/empresa6.png">
                 </div>
 
-                <div id="companie-7">
-                    <img src="./Assets/empresa7.svg">
+                <div class="companies-style" id="companie-7">
+                    <img src="./Assets/empresa7.png">
                 </div>
 
-                <div id="companie-8">
-                    <img src="./Assets/empresa8.svg"> 
+                <div class="companies-style" id="companie-8">
+                    <img src="./Assets/empresa8.png"> 
                 </div>
 
-                <div id="companie-9">
-                    <img src="./Assets/empresa9.svg">
+                <div class="companies-style" id="companie-9">
+                    <img src="./Assets/empresa9.png">
                 </div>
             </div>
         </section>
