--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 
         <!--ARTIGOS-->
         <section id="articles">
-            <article  id="g1">
+            <article>
                     <div id="g1-text">
                         <h1 id="g1-title">Gestão de Qualidade <br>
                             e Processos</h1>
@@ -138,7 +138,7 @@
                     </figure>
             </article>
             
-            <article id="g2">  
+            <article>  
                     <div id="g2-text">
                         <h1 id="g2-title">Gerenciamento e <br>
                             análise de testes</h1>
